--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/main.js"
+    "dev": "nodemon src/main.js",
+    "start": "node src/main.js"
   },
   "author": "Rozakul Barkhi",
   "license": "ISC",
